#37 - test(admin): update unit tests for permissions, roles and admin